@startuml
class Inventory_App{
    main()
    start()
}

class AppController{
    - inventoryTableView: TableView
    - serialNumberColumn: TableColumn
    - nameColumn: TableColumn
    - valueColumn: TableColumn
    - addSerialNumberDisplay: TextField
    - addItemNameDisplay: TextField
    - addItemValueDisplay: TextField
    - editValueDisplay: TextField
    - editSerialNumberDisplay: TextField
    - editNameDisplay: TextField
    - searchDisplay: TextField
    - pathDisplay: TextField
    - TSVRadioButton: RadioButton
    - HTMLRadioButton: RadioButton
    - Group: ToggleGroup

    + addItemButtonClicked()
    + editItemClicked()
    + searchSerialNumberClicked()
    + searchNameClicked()
    + saveFileClicked()
    + loadFileClicked()
    + deleteItemClicked()
    + itemClicked()

    + addItem()
    + editItem()
    + searchSerialNumber()
    + searchName()
    + saveHTML()
    + saveTSV()
    + loadHTML()
    + loadTSV()
    + deleteItem()
    + addToObservableList()
    + checkName()
    + checkSerialNumber()
    + checkValue()
    + clearDisplays()
    + formatString()
    + viewAllInventoryClicked()

}

class Item{
    value: String
    serialNumber: String
    name: String

    +getValue()
    +setValue()
    +getSerialNumber()
    +setSerialNumber()
    +getName()
    +setName()
}

org.javafx.App -- Inventory_App
Inventory_App -- AppController
AppController <- Item

@enduml